<resources>
    <string name="app_name">Lets Code</string>
    <string name="facebook_app_id">411777782790345</string>
    <string name="fb_login_protocol_scheme">fb411777782790345</string>
    <string name="nextcource_sign_in">Sign in</string>
    <string name="oldcource_showbutton">Show</string>
    <string name="hint_new_feedback">New feedback</string>
    <string name="oldcource_hidebutton">hide</string>
    <string name="empty_field">Empty field !!</string>
    <string name="network_problem">network problem</string>
    <string name="guest">Guest</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log In</string>
    <string name="username_or_email">Username or Email</string>

    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="channel">Channel</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="sixcontentenough">6 contents enough</string>
    <string name="lenghtnotpermitted">5 char at least</string>
    <string name="insert_all_informations_about_the_course">Insert all informations about the course.</string>
    <string name="insert_all_informations_about_the_request">Insert informations about your needs.</string>
    <string name="content_list">Content list :</string>
    <string name="choosechannel">choose a channel</string>
    <string name="nocontent">no content</string>
    <string name="cource_created_succesfully">Cource created successfully, confirmed soon.</string>
    <string name="nombresvotes">Votes :</string>
    <string name="interested">Interested ?</string>
    <string name="description">Description</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="once_new_cource_created">Once a new course is created</string>
    <string name="once_cource_started">Once a course you have enrolled in has started</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="sign_me">Sign me</string>
    <string name="enrolled">Enrolled</string>
    <string name="click_back_to_exit">Click again to exit.</string>
    <string name="guest_permission_denied">You must log in first</string>
    <string name="no_new_cource_found">NO NEW COURCE FOUND</string>
</resources>
