<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/once_cource_started"
                    android:textColor="#3A3B40"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/setting_cource_notif_oncestarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/setting_cource_notif_oncestarted_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/setting_cource_notif_oncestarted_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/once_new_cource_created"
                    android:textColor="#3A3B40"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/setting_cource_notif_oncecreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/setting_cource_notif_oncecreated_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/setting_cource_notif_oncecreated_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/language"
                android:textSize="20sp"
                android:textStyle="bold" />


            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/setting_cource_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="#3A3B40"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/theme"
                android:textSize="20sp"
                android:textStyle="bold" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/setting_cource_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:textColor="#3A3B40"
                android:textSize="15sp" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_savebtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/save"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="#1565C0"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>